--- a/css/estiloprincipales.css
+++ b/css/estiloprincipales.css
@@ -201,46 +201,62 @@
         }
          }
 
-.titulo {
-        padding-top: 250px;
-        width: 100%;
-        text-align: center;
-        background-color: black;
-        font-family: 'Antique';
-        color: black;
-        font-size: 100px;
-        -webkit-text-stroke-color: white;
-        -webkit-text-stroke-width: 4px;
+.contenedor_cuerpo {
+                   margin-top: 350px;
+                   font-family: 'Lucida Sans Unicode';
+                   font-size: 30px;
+                   text-align: center;
+                   align-items: self-start;
+                   color: rgb(26, 236, 166);
+                   width: 95%;
+                   display: flex;
+                   }
+
+
+
+.imagenbanner {
+              padding-left: 95px;
+              padding-bottom: 20px;
+              }
+
+
+
+.texto {
+       font-family: 'Lucida Sans Unicode';
+       padding-left: 30px;
+       font-size: 30px;
+       text-align: center;
+       color: rgb(26, 236, 166);
+       width: 100%;
+         
+            a:link {
+                color: black;
+                background-color: rgb(40, 184, 71);
+                text-decoration: none;
+                }
+            
+            a:visited {
+                      color: black;
+                      background-color: transparent;
+                    text-decoration: none;
+                      }
+            
+            a:hover {
+                    color: rgb(40, 184, 71);
+                    background-color: black;
+                    text-decoration: none;
+                    }
+            
+            a:active {
+                     color: black;
+                     background-color: transparent;
+                     text-decoration: none;
+                     }
         }
 
-.tabla {
-            width: 100%;
-            margin: 0;
-            background-color: black;
-       }
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border: 2px solid white;
-       }
-        th {
-            background-color: black;
-            color: wheat;
-            font-family: 'Ancient';
-            font-size: 45px;
-            text-align: center;
-       }
-        td {
-            padding: 10px;
-            text-align: left;
-            color: wheat;
-            background-color: black;
-            font-family: 'Impact';
-            font-size: 25px;
-       }
-        a {
-            text-decoration: underline;
-            color: wheat;
-            font-family: 'Impact';
-            font-size: 25px;
-       }
+.listacanciones {
+                text-align: left;
+                font-size: 40px;
+                font-family:'Gill Sans MT';
+                color: rgb(26, 236, 166);
+                }
